--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "enzyme-adapter-react-16": "^1.14.0",
     "eslint": "^5.16.0",
     "eslint-plugin-react": "^7.13.0",
+    "eslint-plugin-react-hooks": "^1.6.1",
     "http-parser-js": "^0.5.1",
     "node-sass": "^4.12.0",
     "react-addons-test-utils": "^15.6.2",
@@ -47,6 +48,7 @@
     "express": "^4.17.1",
     "ramda": "^0.26.1",
     "react": "^16.8.6",
+    "react-cookie": "^4.0.0",
     "react-dom": "^16.8.6",
     "react-loader-spinner": "^2.3.0",
     "react-redux": "^7.1.0",
