--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   "dependencies": {
     "es6-promise": "^4.2.8",
     "express": "^4.17.1",
+    "file-loader": "^4.2.0",
     "ramda": "^0.26.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
