--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "skiutapp",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -58,6 +58,7 @@
     "redux": "^4.0.1",
     "redux-api-middleware": "^3.0.1",
     "redux-thunk": "^2.3.0",
+    "svg-url-loader": "^3.0.2",
     "xml-js": "^1.6.11"
   }
 }
