--- a/package.json
+++ b/package.json
@@ -47,6 +47,9 @@
     "es6-promise": "^4.2.8",
     "express": "^4.17.1",
     "file-loader": "^4.2.0",
+    "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.2.0",
+    "htmllint-loader": "^2.1.4",
     "p5": "^0.9.0",
     "ramda": "^0.26.1",
     "react": "^16.8.6",
